--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./docs
+        working-directory: docs
     strategy:
       matrix:
         compiler: ['lualatex', 'pdflatex']
@@ -16,6 +16,9 @@ jobs:
         thesis: ['EngineerThesis', 'MasterThesis']
       fail-fast: false
     steps:
+      - name: Checkout WUT-Thesis repository
+        uses: actions/checkout@v2
+
       - name: Install LaTeX dependencies
         run: |
           sudo apt-get install -y   \
@@ -30,19 +33,8 @@ jobs:
                texlive-luatex       \
                tex-gyre
 
-      - name: Checkout WUT-Thesis repository
-        uses: actions/checkout@v2
-
       - name: Install Python dependencies
         run: sudo pip install -r requirements.txt
 
-      - name: Generate test cases
-        run: scons generate_tests
-
-      - name: Generate PDF file
-        run: cp test/${{matrix.lang}}/${{matrix.faculty}}/${{matrix.thesis}}.textest main.tex && scons all
-
-      - name: Verify build with referential text
-        run: |
-          scons test pdf=build/pdfs/${{matrix.compiler}}.pdf \
-                ref=test/${{matrix.lang}}/${{matrix.faculty}}/${{matrix.thesis}}_${{matrix.compiler}}.txt
+      - name: Build PDF file
+        run: scons all
