--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -4,3 +4,22 @@ test/**/*.pdf
 .sconsign.dblite
 .vscode
 /*.pdf
+venv
+
+main.app
+main.aux
+main.bbl
+main.bcf
+main.bcf-SAVE-ERROR
+main.blg
+main.fdb_latexmk
+main.fls
+main.lof
+main.log
+main.lot
+main.out
+main.run.xml
+main.synctex.gz
+main.toc
+
+**/.DS_Store
