--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -9,6 +9,7 @@ venv
 main.app
 main.aux
 main.bbl
+main.bbl-SAVE-ERROR
 main.bcf
 main.blg
 main.fdb_latexmk
@@ -22,3 +23,4 @@ main.synctex.gz
 main.toc
 
 **/.DS_Store
+.idea
