--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -11,9 +11,11 @@ main.aux
 main.bbl
 main.bbl-SAVE-ERROR
 main.bcf
+main.bcf-SAVE-ERROR
 main.blg
 main.fdb_latexmk
 main.fls
+main.lol
 main.lof
 main.log
 main.lot
